0.15.9: (unreleased)
	New feature:
		- Support for Startup Notification
		- Standalone mode in dmenu
	Improvements:
		- Keep same line selected
		- Cleanup menu code by re-using Switcher
	Bug fixes:

0.15.8:
	New feature:
		- Scrollbar.
		- More custom keybindings.
	Improvements:
		- dmenu compatibility.
		- Don't refilter on all keypresses.
		- Hide Docks and desktops from the window list. (remove i3bar hack)
	Bug fixes:
		- Fix Desktop numbering.
		- Mis-alignment of arrow down box with message (#189)
		- Fix issue with mouse interaction needing keyboard press to complete.
		- Fix -no-custom still allows escape to quit.
		- Fix compiler warnings.
		- Fix dmenu mode. (#200)
		- Break CMD AI to have dmenu compatibility.
		- Fix processing of signals.

0.15.7:
	Bug fixes:
		- Auto-wrap text in message dialog.
		- Fix ellipsiziing in entry box.
		- Fix crash on empty list with custom input (#175).
		- SSH: Ignore comments in Host line (#178).
		- Fix issues with BSD (#180)
	New feature:
		- Markup support error message.
		- Implement -no-custom as alternative to -only-select (#176).
		- Fuzzy match option. (#133)
	Improvements:
		- Make more keys user-configurable. (#66)

0.15.5:
	Bug fixes:
		- Reduce time waiting for keyboard grab (#153)
		- Also grab Key Release on exit. (#167)
		- Fix failing font size estimation code.
	New feature:
		- [DMENU] Allow to select line matching pattern from cmdline.(#165)
		- [DMENU] Allow to set filter from cmdline. (#164)
		- [DMENU] Allow output to be formatted (string, filter, index, index 1 based)
		- [DMENU] Only match input lines mode.
		- [DMENU] Custom keybinding for return value.(#154,#156)
		- [DMENU] Allow additional message line. (#166)
	Improvements:
		- (Start) adding keybinding support (#131)
		- Cleanup warnings from clang checkers.
		- Fix keybindings on Russian layout (#169)
	Open bugs:
		- Urgency hint not always working (#162)

0.15.4:
	New feature: